<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mainUI.AboutUsActivity"
    tools:showIn="@layout/activity_about_us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/app_house"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:text="@string/members"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/abdullah_md_humayun_kabir"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/abdullah_kabir_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:typeface="sans"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/facebook"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/about_us_facebook_abd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:fontFamily="monospace"
                        android:text="@string/facebook_com_abdullah_kabir"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp"
                        android:typeface="sans"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/asif_imtiaz_shaafi"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/a15shaafi_209_gmail_com"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:typeface="sans"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/facebook"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/about_us_facebook_shaafi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:fontFamily="monospace"
                        android:text="@string/facebook_com_asif_shaafi"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp"
                        android:typeface="sans"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/mohiuddin_shoikot"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/shoikot33_gmail_com"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:typeface="sans"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="cursive"
                        android:text="@string/facebook"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/about_us_facebook_mohi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:fontFamily="monospace"
                        android:text="@string/facebook_com_mshoikat"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18sp"
                        android:typeface="sans"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
